--- a/css/style.css
+++ b/css/style.css
@@ -64,3 +64,14 @@ main {
 .jumbotron p {
     width: 30%;
 }
+.jumbotron-image {
+    width: 50%;
+    position: absolute;
+    top: 20%;
+    left: 50%;
+
+
+    /* TEST */
+    height: 300px;
+    background-color: saddlebrown;
+}
