--- a/css/style.css
+++ b/css/style.css
@@ -50,6 +50,8 @@ header {
 main {
     margin-top: 50px;
 }
+
+/* jumbotron */
 .contain-jumbotron {
     background-color: royalblue;
 }
@@ -65,13 +67,36 @@ main {
     width: 30%;
 }
 .jumbotron-image {
-    width: 50%;
+    width: 60%;
     position: absolute;
     top: 20%;
-    left: 50%;
-
+    left: 40%;
 
     /* TEST */
     height: 300px;
     background-color: saddlebrown;
+}
+
+/* Subscription plans */
+.contain-plans {
+    width: 80%;
+    margin: auto;
+    margin-top: 160px;
+
+    /* TEST */
+    height: 500px;
+    background-color: salmon;
+}
+.col-plans {
+    width: 32%;
+    margin-top: 20px;
+
+    /* TEST */
+    background-color: aqua;
+    height: 300px;
+}
+
+.col-standard {
+    margin-left: 2%;
+    margin-right: 2%;
 }
