--- a/css/style.css
+++ b/css/style.css
@@ -18,26 +18,29 @@ body {
 .col {
     float: left;
 }
-
 img {
     width: 100%;
 }
-
 li {
     display: inline-block;
     list-style-type: none;
 }
-
 a {
     text-decoration: none;
 }
-.txt13 {
+.txtblack {
     color: black;
+}
+.txt13 {
     font-size: 13px;
+}
+.txt11 {
+    font-size: 11px;
 }
 
 /* HEADER */
 header {
+    background-color: #ffffff;
     position: fixed;
     width: 100%;
     top:0;
@@ -47,6 +50,8 @@ header {
     height: 50px;
     line-height: 50px;
 }
+
+/* Logo */
 .col-logo {
     width: 10%;
     text-align: center;
@@ -57,6 +62,8 @@ header {
 .logo-img {
     width: 72%;
 }
+
+/* Menu Nav */
 .col-menu-left {
     width: 40%;
 }
@@ -70,12 +77,15 @@ header {
 .col-menu-right li {
     margin-left: 7%;
 }
+div.col-nav li:hover {
+    border-bottom: 2px solid gray;
+}
 .col-start {
     width: 10%;
     text-align: center;
 }
 
-/* BUTTON */
+/* BUTTONS */
 .btn {
     display: inline-block;
     line-height: normal;
@@ -97,28 +107,31 @@ main {
 
 /* jumbotron */
 .contain-jumbotron {
-    background-color: royalblue;
+    background-color: #b4d0e7;
 }
 .jumbotron {
     width: 85%;
     margin:auto;
-    position: relative;
-
-    /* TEST */
-    /* height: 200px; */
+}
+h1 {
+    padding-top: 6%;
+    font-size: 65px;
 }
 .jumbotron p {
     width: 30%;
+    padding-top: 3%;
+}
+.jumbotron a {
+    margin-top: 8%;
+}
+.jumbotron i {
+    font-size: 30px;
+    padding-top: 3%;
+    padding-bottom: 5%;
 }
 .jumbotron-image {
     width: 60%;
-    position: absolute;
-    top: 20%;
-    left: 40%;
-
-    /* TEST */
-    height: 300px;
-    background-color: saddlebrown;
+    float: right;
 }
 
 /* Subscription plans */
@@ -126,20 +139,20 @@ main {
     width: 80%;
     margin: auto;
     margin-top: 160px;
-
-    /* TEST */
-    height: 500px;
-    background-color: salmon;
 }
 .col-plans {
     width: 32%;
     margin-top: 20px;
+    border: 1px solid lightgray;
 
     /* TEST */
-    background-color: aqua;
+    /* background-color: aqua; */
     height: 550px;
 }
-
+.col div:first-child {
+    border: 1px solid lightgray;
+    text-align: center;
+}
 .col-standard {
     margin-left: 2%;
     margin-right: 2%;
