--- a/css/style.css
+++ b/css/style.css
@@ -140,6 +140,29 @@ h1 {
     margin: auto;
     margin-top: 160px;
 }
+.contain-plans h2 {
+    font-size: 40px;
+    padding-bottom: 4%;
+}
+.inputradio {
+    display: inline-block;
+    width: 15px;
+    height: 15px;
+    border-radius: 50%;
+    vertical-align: middle;
+    border: 1px solid lightgrey;
+}
+.inputradio:hover {
+    border: 4px solid #0061ff ;
+}
+.cont-col {
+    width: 85%;
+    margin: auto;
+    padding-top: 5%;
+}
+.top-col-plan {
+    padding: 2% 0;
+}
 .col-plans {
     width: 32%;
     margin-top: 20px;
