--- a/css/style.css
+++ b/css/style.css
@@ -21,10 +21,6 @@ body {
 img {
     width: 100%;
 }
-li {
-    display: inline-block;
-    list-style-type: none;
-}
 a {
     text-decoration: none;
 }
@@ -34,8 +30,14 @@ a {
 .txt13 {
     font-size: 13px;
 }
-.txt11 {
-    font-size: 11px;
+.txt12 {
+    font-size: 12px;
+}
+.txtgrey {
+    color: #6c7b88;
+}
+.margin-bottom1 {
+    margin-bottom: 1%;
 }
 
 /* HEADER */
@@ -67,6 +69,8 @@ header {
 /* Menu Nav */
 .col-nav li {
     height: 50px;
+    display: inline-block;
+    list-style: none;
 }
 .col-menu-left {
     width: 40%;
@@ -94,15 +98,20 @@ div.col-nav li:hover {
     display: inline-block;
     line-height: normal;
     font-size: 13px;
+}
+.btn-small {
     padding: 2% 10%;
+}
+.btn-large {
+    padding: 1% 2%;
 }
 .btn-blu {
     color: white;
     background-color: #0061ff;
 }
-.box-btn {
+/* .box-btn {
     width: 20%;
-}
+} */
 
 /* MAIN */
 main {
@@ -125,8 +134,8 @@ h1 {
     width: 30%;
     padding-top: 3%;
 }
-.jumbotron a {
-    margin-top: 8%;
+.jumbotron div.txt11 {
+    padding-top: 1%;
 }
 .jumbotron i {
     font-size: 30px;
@@ -140,7 +149,7 @@ h1 {
 
 /* Subscription plans */
 .contain-plans {
-    width: 80%;
+    width: 70%;
     margin: auto;
     margin-top: 160px;
 }
@@ -164,27 +173,77 @@ h1 {
     margin: auto;
     padding-top: 5%;
 }
+div.cont-col h3 {
+    padding-bottom: 5%;
+}
+.price {
+    font-size: 14px;
+    padding-bottom: 1%;
+}
+.included-offer {
+    padding-top: 10%;
+    list-style: none;
+}
+.included-offer li {
+    padding-top: 5%;
+}
+.try-plan {
+    width: 100%;
+    text-align: center;
+    margin: 15% 0;
+}
 .top-col-plan {
     padding: 2% 0;
-}
-.col-plans {
-    width: 32%;
-    margin-top: 20px;
-    border: 1px solid lightgray;
-
-    /* TEST */
-    /* background-color: aqua; */
-    height: 550px;
-}
-.col div:first-child {
-    border: 1px solid lightgray;
+    border-bottom: 1px solid lightgray;
     text-align: center;
 }
-.col-standard {
-    margin-left: 2%;
-    margin-right: 2%;
+.col-plans {
+    width: 30%;
+    margin-top: 20px;
+    border: 1px solid lightgray;
+    height: 800px;
 }
-
+.col-standard {
+    margin-left: 5%;
+    margin-right: 5%;
+}
 .buynow a {
     text-decoration: underline;
+}
+hr {
+    width: 15%;
+    margin: 10% 0;
+}
+.highlights {
+    line-height: 300%;
+    margin-top: 5%;
+    list-style: none;
+}
+.highlights i {
+    color: #0061ff;
+}
+
+/* Enterprise */
+.contain-enterprise {
+    margin-top: 5%;
+    border: 1px solid lightgray;
+}
+.contain-enterprise div:first-child {
+    border-bottom: 1px solid lightgray;
+    text-align: center;
+    padding: 1%;
+    margin-bottom: 3%;
+}
+.enterprise {
+    width: 95%;
+    margin: auto;
+}
+.enterprise a {
+    float: right;
+}
+.enterprise h3 {
+    margin-bottom: 2%;
+}
+.enterprise h5 {
+    margin-bottom: 3%;
 }
