--- a/css/style.css
+++ b/css/style.css
@@ -118,6 +118,14 @@ div.col-nav li:hover {
 main {
     margin-top: 50px;
 }
+.contain-main {
+    width: 70%;
+    margin: auto;
+    margin-top: 160px;
+}
+.contain-main h2 {
+    margin-bottom: 5%;
+}
 
 /* jumbotron */
 .contain-jumbotron {
@@ -148,11 +156,6 @@ h1 {
 }
 
 /* Subscription plans */
-.contain-plans {
-    width: 70%;
-    margin: auto;
-    margin-top: 160px;
-}
 .contain-plans h2 {
     font-size: 40px;
     padding-bottom: 4%;
@@ -215,7 +218,7 @@ div.cont-col h3 {
 .functions {
     padding-left: 7%;
 }
-#icon {
+.icon {
     margin-left: -7%;
 }
 .special-link a {
@@ -302,13 +305,68 @@ hr {
 }
 
 /* Logos clients */
+.contain-logos {
+    margin-top: 3%;
+}
 .col-logos {
     width: 400px;
     height: 400px;
-    background-color: red;
 }
-.col.text {
+.col-text-logos {
     width: calc(100% - 800px);
-    background-color: chocolate;
+    background-color: #f5f5f5;
     height: 400px;
+    padding: 3%;
+}
+.box-text-logo {
+    width: 25%;
+}
+.col-text-logos p {
+    margin-bottom: 10%;
+}
+.linelogo::after {
+    display: block;
+    content: '';
+    width: 10%;
+    height: 1px;
+    background-color: lightgray;
+    margin-top: 5%;
+    margin-bottom: 10%;
+}
+.box-logo {
+    width: 200px;
+    height: 200px;
+    display: flex;
+}
+.box-logo img {
+    filter: invert(1);
+    display: block;
+    width: 60%;
+    margin: auto;
+    line-height: 200px;
+}
+#designit {
+    background-color: #a2d39b;
+    border: 10px solid #d0e9cd;
+}
+#asu {
+    background-color: #61082b;
+}
+#uf {
+    background-color: #0093ce;
+}
+#topps {
+    background-color: #ff1c1c;
+}
+#worldbicycle {
+    background-color: #d5001f;
+}
+#hearst {
+    background-color: #b4d0e7;
+}
+#lonely {
+    background-color: #0d2481;
+}
+#clearch {
+    background-color: #ffd830;
 }
