--- a/css/style.css
+++ b/css/style.css
@@ -447,6 +447,6 @@ footer {
     color: white;
     font-size: 13px;
 }
-.line-footer {
-    color: lightgray;
+.languages {
+    margin-bottom: 10%;
 }
