--- a/css/style.css
+++ b/css/style.css
@@ -316,7 +316,7 @@ hr {
 .col-text-logos {
     width: calc(100% - 800px);
     background-color: #f5f5f5;
-    height: 400px;
+    min-height: 400px;
     padding: 3%;
 }
 .box-text-logo {
@@ -407,9 +407,6 @@ hr {
     line-height: 70px;
     font-weight: bold;
 }
-.faq li:last-child {
-    margin-bottom: 10%;
-}
 .faq h2 {
     margin-bottom: 5%;
 }
@@ -424,6 +421,7 @@ footer {
     background-color: black;
     color: white;
     padding-top: 5%;
+    margin-top: 8%;
 }
 .footer-menus {
     width: 80%;
